--- a/live-github-readme/package.json
+++ b/live-github-readme/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "live-readme-stats",
-  "version": "1.0.0",
-  "dependencies": {
-    "node-fetch": "^2.7.0"
-  }
+  "builds": [
+    {
+      "src": "api/stats.js",
+      "use": "@vercel/node"
+    }
+  ]
 }
