--- a/live-github-readme/package.json
+++ b/live-github-readme/package.json
@@ -1,8 +1,6 @@
 {
-  "builds": [
-    {
-      "src": "api/stats.js",
-      "use": "@vercel/node"
-    }
-  ]
-}
+  "name": "live-readme-stats",
+  "version": "1.0.0",
+  "dependencies": {
+    "node-fetch": "^2.7.0"
+  }
