--- a/live-github-readme/vercel.json
+++ b/live-github-readme/vercel.json
@@ -4,5 +4,11 @@
       "src": "api/stats.js",
       "use": "@vercel/node"
     }
+  ],
+  "routes": [
+    {
+      "src": "/api/stats",
+      "dest": "/api/stats.js"
+    }
   ]
 }
